navigate to match activity from main on button click

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         android:text="@string/newMatchButtonText"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:onClick="startMatch"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
